css/main.css
html,
body {
    height: 100%;
    width: 100%;
}

h1 {
    padding-top: 20px;
    text-align: center;
    font-size: 36px;
}

p {
    font-size: 3vmin;
    text-align: left;
    margin-left: 10%;
    margin-right: 10%;
}

#navbarNav li a {
    color: #c9e5ed;
}

#home {
    /* The image used */
    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.6) 100%), url("../assets/cube.jpg");
    background-color: rgba(0, 0, 0, 0.6);
    /* Full height */
    height: 100%;
    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    display: -webkit-flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

#about {
    min-height: 100%;
    width: 100%;
    background-color: #c9e5ed;
    color: #373737;
    margin-bottom: 30px;
}

#experience,
#technologies {
    min-height: 100%;
}

#experience {
    background-color: white;
    color: #373737;
    margin-top: -30px;
}

.card {
    width: 100%;
    margin-top: 20px;
    margin-left: 20px;
    margin-right: 20px;
    margin-bottom: 20px;
    max-width: 20rem;
}

.card h1 {
    padding-bottom: 10px;
}

#experience .card {
    background-color: whitesmoke;
}

#cards {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
}

#technologies {
    background-color: #697076;
    color: lightblue;
}

#technologies .card {
    max-width: 18rem;
    background-color: #373737;
    display: -webkit-flex;
    justify-content: center;
    align-items: center;
}

.button {
    margin-left: 20px;
    margin-right: 20px;
}

/* decrease font size and turn off parallax on phones */
@media screen and (max-device-width: 768px) {
    p {
        font-size: 1rem;
    }
    #home {
        background-attachment: scroll;
    }
}

